<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_are_searching"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.rey.material.widget.RadioButton
            android:id="@+id/masse"
            style="@style/Material.Drawable.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masse"
            android:layout_gravity="center_vertical"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <com.rey.material.widget.RadioButton
            android:id="@+id/praise"
            style="@style/Material.Drawable.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/praise"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:layout_gravity="center_vertical"
            android:textSize="14sp" />

        <com.rey.material.widget.RadioButton
            android:id="@+id/confession"
            style="@style/Material.Drawable.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confession"
            android:layout_gravity="center_vertical"
            android:textColor="@color/red"
            android:textSize="14sp" />

        <com.rey.material.widget.RadioButton
            android:id="@+id/activity"
            style="@style/Material.Drawable.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/activity"
            android:textColor="@color/red"
            android:textSize="14sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/where"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/write_a_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/write_a_city"
            android:padding="5dp"
            android:textColorHint="@color/red"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:background="@drawable/shape_rectangle_radius_5_white_border_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/when"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/date_picker"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_height="200dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:background="@drawable/shape_rectangle_radius_5_red"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/validate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/shape_rectangle_radius_5_red"
                android:gravity="center"
                android:text="@string/validate"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>